osha.policy Changelog
=====================

osha.policy 1.2.10 (2009-07-28)
-------------------------------

- added patch to queuecatalog to make it work with relations (brand)

osha.policy 1.2.9 (2009-07-26)
------------------------------

- small fix to the oshmail creation form (thomas)

osha.policy 1.2.8 (2009-07-19)
------------------------------

- made a getObject in ProviderHelper robust to not quit on catalog inconsistency (pilz)
- patching Press Release: Date() now returns storydate (==release date) (thomasw)
- createOSHMail: fixed queries for news&events, made inserting content optional (thomasw)

osha.policy 1.2.7 (2009-07-12)
------------------------------

- modified FCKEditor patch, so that Images can be found via "Browse server" again (thomasw)

osha.policy 1.2.6 (2009-07-03)
------------------------------

- enhanced Collage (OSHMail) generating script. Teasers, news, events, press releases
  and publications are automatically filled in (thomasw)

osha.policy 1.2.5 (2009-06-30)
------------------------------

- changed path for arial fonts (pilz)

osha.policy 1.2.4 (2009-06-25)
------------------------------

- added notifyMemberAreaCreated from former SEPStructure (pilz)


osha.policy 1.2.3 (2009-06-19)
------------------------------

- bugfix in patch subject_accessor to prevent infinite recursions (thomasw)

osha.policy 1.2.2 (2009-06-17)
------------------------------

- Code cleanup, removed prints (gerken)

- Fixed & enhanced testing (gerken)

- Made schema-extender classes respect the browser-layer (thomasw)

osha.policy 1.2.1 (2009-06-10)
------------------------------

- Removed prints in schemaextender (thomasw)

- Updated annotations file for google CSE (thomasw)

osha.policy 1.1 (2009-05-12)
----------------------------

- Packaged egg (pilz)

osha.policy 1.0 (2008-03-31)
----------------------------

- Initial port